--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,10 @@
       <a href="/survey"><button type="button" class="btn btn-primary center-block">Go to Survey</button></a>
     </p>
   </div>
-  <a href="/api/friends">Friends List API</a> | <a href="">Github Repo</a>
+  
+  <div class="container">
+      <a href="/api/friends">Friends List API</a> | <a href="">Github Repo</a>
+  </div>
   
 </body>
 </html>
