brings back pic/added friends

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -134,15 +134,35 @@
         <a href="/api/friends">Friends List API</a> | <a href="">Github Repo</a>
         <!-- </div> -->
     </footer>
-    <br>
-
-
-
-
-
 
     <!-- modal goes here -->
 
+    <!-- Button trigger modal -->
+    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+    Launch demo modal
+  </button> -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="bestMatch" tabindex="-1" role="dialog" aria-labelledby="best-match" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="meet-match">Meet your Match!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="match-text"></p>
+                    <img class='img-fluid' scr="" alt ="no image available">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
@@ -172,12 +192,18 @@
         $.post("/api/friends", newFriend,
             function (match) {
 
-                // // If a table is available... tell user they are booked.
-                // if (data) {
-                //     //   alert("Yay! You are officially booked!");
-                //     console.log("welcome to the friend-zone");
-                // }
-                console.log(match);
+                // If a table is available... tell user they are booked.
+                if (match) {
+                    alert("Welcome to the friend-zone.");
+                    $("#match-text").text(match.name);
+                    $(".modal-body > img").attr("src", match.photo);
+                    $("#bestMatch").modal("show");
+                    
+
+                }
+                else {
+                    $("#bestMatch").text("Sorry, no friends for you, loser.");
+                };
 
                 // // If a table is available... tell user they on the waiting list.
                 // else {
