--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -131,7 +131,7 @@
 
     <footer>
         <!-- <div class="container"> -->
-        <a href="/api/friends">Friends List API</a> | <a href="">Github Repo</a>
+        <a href="/api/friends">Friends List API</a> | <a href="https://github.com/lilysimmons/FriendFinder">Github Repo</a>
         <!-- </div> -->
     </footer>
 
