--- a/app/public/home.html
+++ b/app/public/home.html
@@ -23,7 +23,7 @@
   </div>
   
   <div class="container">
-      <a href="/api/friends">Friends List API</a> | <a href="">Github Repo</a>
+      <a href="/api/friends">Friends List API</a> | <a href="https://github.com/lilysimmons/FriendFinder">Github Repo</a>
   </div>
   
 </body>
